# simcc

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: packages.cmake
msvc/: libsimcc-test.vcxproj  (+8 more)
simcc/: CMakeLists.txt  Makefile  any.h  base64.cc  base64.h  data_stream.cc  data_stream.h  data_stream.inl.h  duration.cc  duration.h  duration.inl.h  exp.h  file_util.cc  file_util.h  file_util.inl.h  gcc_list.h  gettimeofday.h  handler_guard.h  http_data_parser.h  ini_parser.cc  ini_parser.h  inner_pre.cc  inner_pre.h  memmem.h  pch.cc  platform_config.h  qh_palloc.cc  qh_palloc.h  random.h  ref_object.h  simcc_export.h  singleton.h  slice.h  string_util.cc  string_util.h  timestamp.h  timestamp.inl.h  tokener.h  type_traits.h  type_traits_ext.h  (+2 more)
simcc/json/: inherited_conf_json.cc  inherited_conf_json.h  json_array.cc  json_array.h  json_cast.h  json_common.cc  json_common.h  json_object.cc  json_object.h  json_parser.cc  json_parser.h  json_tokener.h  json_utf8_inl.h  json_value.cc  json_value.h
simcc/misc/: crc16.cc  crc16.h  crc32.cc  crc32.h  dgram_filter.h  double_buffering.cc  double_buffering.h  dynlib.cc  dynlib.h  lru.h  md5.cc  md5.h  modp_b64.cc  modp_b64.h  php_md5.h
test/: CMakeLists.txt  Makefile  any_test.cc  crc16.php  crc16.py  crc_test.cc  data_stream_test.cc  dgram_filter_test.cc  double_buffering_test.cc  file_util_test.cc  http_multi_data_parser_test.cc  inherited_conf_json_test.cc  ini_parser_test.cc  json2_test.cc  json_merge_test.cc  json_test.cc  lru_test.cc  md5_test.cc  qh_palloc_test.cc  ref_object_test.cc  string_util_test.cc  time_test.cc  tokent_test.cc  trivial_test.cc  utility_test.cc  winmain.cc
test/test_data/base64/: base64.test.inputfile.txt  outputfile.txt
test/test_data/ini/: ini_parser_testfile.ini  ini_test_data_utf8.txt  test2_utf8.txt
test/test_data/json/: browser_relative.json  browser_relative2.json  common_conf.json  gbk-chinese.json.txt  inherited_conf-2.json  inherited_conf.json  mid_json.txt  more_json_testcase.txt  unicode.json.txt
(+69 files in other folders)
